--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ body {
 background: -moz-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
 background: -webkit-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
 background: linear-gradient(to bottom, #1C5380 0%, #2388CB 0%, #06365f 100%);
+margin-bottom: -150px;
 }
 
 
@@ -49,44 +50,49 @@ background: linear-gradient(to bottom, #1C5380 0%, #2388CB 0%, #06365f 100%);
 .insta-log-in button p {
   margin: 5px;
 }
-/* .button {
-  
-} */
 
 .box {
   border-radius: 6px;
-  border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 500px;
   height: 400px;
-
+  background: white;
+  box-shadow: 0px -10px 15px -9px rgba(0, 0, 0, 0.4);
 }
 
 .box div {
-  color: white;
+  color:black;
   width: 400px;
-  
+ 
+
 }
 
 .section {
   width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  /* align-items: center; */
+  justify-content: space-around, ;
+  margin: 20px;
+}
+
+.margin {
+  margin:20px
 }
 
 #main {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .phone {
   margin-right: 50px;
 }
+
+
 
 .footer li:nth-child(-n+8) {
   color: #1c5380; 
