--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,58 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.nav {
+  display: flex;
+  flex-direction: column;
+}
+.top-nav {
+  height: 20vw;
+  background-image: linear-gradient(#1c538091, #1c5380);
+}
+.top-nav-container {
+  position: absolute;
+  top: 78px;
+  left: 45%;
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+  justify-content: space-between;
+  align-items: center;
+}
+.top-nav-container button {
+  height: 32px;
+  padding: 4px 10px;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  background-image: linear-gradient(#1c538091, #1c5380);
+  border: 1px solid #06365f;
+}
+.top-nav-container img {
+  margin-right: 8px;
+}
+
+.button-login {
+  font-size: 16px;
+  color: white;
+  font-weight: 200;
+}
+.bottom-nav-left {
+  width: fit-content;
+  position: absolute;
+  top: 78px;
+  left: 15%;
+}
+.bottom-nav-right {
+  background-image: url("/images/frame.png");
+  width: 40%;
+
+  position: absolute;
+  top: 25%;
+  left: 45%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.bottom-nav-right-container {
+  padding: 32px 16px;
+}
