--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,25 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.background{
+  display: flex;
+  align-items: center;
+  height: 90vh;
+  justify-content: space-around;
+}
+.container{
+  background-image: url(/images/frame.png);
+  max-width: 35%;
+  align-content: center;
+}
+footer{
+  display: flex;
+  justify-content: center;
+}
+.text{
+  max-width: 90%;
+  margin: 30px;
+}
+h1{
+  
+}
