--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,12 @@ body {
 clear: both;
 }
 
-.container-arriba {
+.container-top {
 background-color: #1c5380;
 height: 300px;
 }
 
-.container-abajo {
+.container-bottom {
 margin: 0;
 background-color: #fff;
 }
