--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,93 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#header {
+  height: 300px;
+  background: #1c5380;
+  margin-bottom: -150px;
+}
+
+.login {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.login button img {
+  margin: 5px;
+}
+.login button p {
+  margin: 5px;
+}
+
+.login button {
+  border: none;
+  background: #06365f;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.containerGeneral {
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+  background: white;
+  box-shadow: 0px -9px 18px -8px rgba(0, 0, 0, 0.4);
+}
+
+.containerGeneral div {
+  color: black;
+  width: 400px;
+}
+
+h1 {
+  color:#06365f;
+}
+
+.section {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 20px;
+}
+
+.margin {
+  margin: 20px;
+}
+
+#principal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.telefonoMovil {
+  margin-right: 50px;
+}
+
+.footer li:nth-child(-n + 8) {
+  color: #1c5380;
+  margin: 10px;
+}
+
+.footer li:nth-child(n + 9) {
+  color: grey;
+  margin: 10px;
+}
+
+.footer {
+  font-weight: bold;
+  font-size: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
