--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,44 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+
+  background-image: linear-gradient(
+    to bottom,
+    #1c5380,
+    #1c5380 35%,
+    white 35%,
+    white
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  max-width: 80vh;
+}
+
+.container-main {
+  display: flex;
+  flex-direction: row;
+}
+.main {
+  background-color: #fff;
+  width: 80%;
+  border-radius: 5px;
 }
