--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,125 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
 }
+
+#blue_bkg{
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
+  height: 30vh;
+  
+  
+}
+
+#flex-container{
+  display: flex;
+}
+
+#logo-and-text-container{
+  margin-top: -160px;
+  width: 31%;
+}
+
+
+
+#text{
+  background-color: white;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 30px;  
+  box-shadow: -5px 0px 13px -10px #4b4b4b, 5px 0px 13px -10px #4b4b4b, -5px 0px 2px 0px rgba(255, 255, 255, 00);
+}
+
+#title{
+  padding-bottom: 10px;
+  color: #06365f;
+}
+
+#main-text{
+  padding-bottom: 20px;
+  text-align: justify;
+}
+
+#phones-container{
+  padding-right: 100px;
+}
+
+.phones{
+  margin-top: -180px;
+  margin-left: 100px;
+}
+
+.logo-and-button{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+#home-icon{
+  padding-right: 10px;
+  
+}
+
+
+#login-button{
+  padding:10px 20px;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: rgb(41, 41, 41);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
+  color: white;
+  font-weight: bold;
+  margin-bottom: 5px;
+  cursor: pointer;
+  
+}
+
+#app-store-buttons{
+  cursor: pointer;
+}
+
+#iphone-button{
+  padding-right: 15px;
+}
+
+footer{
+  padding-top: 80px;
+  width: 70vw;
+}
+
+#flex-footer{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+li{
+  padding-right: 10px;
+  color: #06365f;
+  font-size: 12px;
+  font-weight:bold;
+  transition: 0.4s all ease-in-out;
+  cursor: pointer;
+}
+
+li:hover{
+  color: #4b4b4b;
+}
+
+#grey-copyright{
+  color: #4b4b4b;
+}
+
