--- a/styles/style.css
+++ b/styles/style.css
@@ -9,24 +9,52 @@ body {
   margin: 0;
 }
 .background{
+  height: 300px;
+  background-color: #1c5380;
+  margin-bottom: -150px;
+  }
+.container{
+  display: flex;
+  justify-content: space-around;
+  height: 75vh;
+}
+.container-button{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container-text{
+  background-image: url(/images/frame.png);
+  width: 500px;
+  
+}
+button{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1c5380;
+  border-radius: 4px;
+  width:100px;
+  height: 40px;
+  
+}
+.text-button{
+  color: rgba(255, 255, 255, 0.76);
+}
+.img-apple-android{
   display: flex;
   align-items: center;
-  height: 90vh;
-  justify-content: space-around;
-}
-.container{
-  background-image: url(/images/frame.png);
-  max-width: 35%;
-  align-content: center;
-}
-footer{
-  display: flex;
-  justify-content: center;
-}
-.text{
-  max-width: 90%;
-  margin: 30px;
 }
 h1{
+  color: #06365f;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
   
+}
+.text{
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 15px;
+  font-weight:400;
 }
