--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,111 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+
+html, body{
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* based on https://blog.prototypr.io/css-only-multi-color-backgrounds-4d96a5569a20 */
+  background: -webkit-linear-gradient(#1c5380 90%, white 40%);
+  background: -o-linear-gradient(#1c5380 40%, white 40%);
+  background: -moz-linear-gradient(#1c5380 40%,white 40%);
+  background: linear-gradient(#1c5380 40%, white 40%);
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+}
+.home { 
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: row;
+  align-content:space-between;
+  justify-content: space-between;
+  width: 550px;
+}
+
+.log-in {
+  background-color: #1c5380;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  width: 110px;
+  height: 50px;;
+  
+}
+.home-button {
+  width: 20px; 
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 40px;
+  padding-left: 80px;
+}
+
+.left {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin: 90px 50px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  padding-top: 80px;
+}
+.description {
+  background-image: url('images/frame.png');
+  background-image: linear-gradient(beige, white);
+  border-top: 1px solid rgb(199, 199, 160);
+  display: flex;
+  flex-direction: row;
+  margin: 20px 40px;
+  width: 550px;
+  padding: 20px 30px;
+}
+
+p {
+  font-size:28px;
+  color: #06365f;
+  font-weight: 600;
+}
+
+span {
+  font-size: 18px;
+}
+
+.download {
+  display: flex;
+  flex-direction: row;
+  align-content:space-around;
+  justify-content: space-around;
+}
+.press {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 10px;
+}
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+a {
+  text-decoration: none;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  color: #1c5380;
 }
