--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,144 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+/* Background */
+
+.background {
+  background-color: rgb(53,95,131);
+  background: linear-gradient(0deg, rgba(53,95,131,1) 0%, rgba(87,127,160,1) 45%);
+  height: 250px;
+  display: flex;
+}
+
+/* Main */
+
+h1 {
+  color: rgb(12, 53, 90);
+}
+
+.container-content {
+  display: flex;
+  width: 800px;
+  margin-top: 100px;
+  justify-content: center;
+  margin-left: 330px;
+}
+
+.mobiles-img img {
+  height: 500px;
+}
+
+.main-info {
+  margin-left: 50px;
+}
+
+.main-info-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0;
+  width: 750px;
+}
+
+.instagram-img {
+  display: flex;
+  height: 90px;
+  width: auto;
+  margin-left: 5px;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: rgb(70,115,152);
+  background: linear-gradient(0deg, rgba(70,115,152,1) 0%, rgba(111,147,175,1) 45%);
+  height: 50px;
+  width: 120px;
+  margin-right: 13px;
+  border-radius: 4px;
+  border-color: rgb(53, 95, 131);
+  border-width: 2px;
+  border-style: solid;
+}
+
+.login span p {
+  font-size: 18px;
+  color: rgb(227, 234, 239);
+  font-weight: bold;
+}
+
+.login img {
+  height: 25px;
+  width: auto;
+  margin-right: 10px;
+}
+
+.frame {
+  background-image: url("/images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 750px;
+  height: 400px;
+  position: absolute;
+}
+
+.frame h1 {
+  font-size: 24px;
+  width: 250px;
+  margin-top: 40px;
+  margin-left: 40px;
+} 
+
+.frame p {
+  font-size: 18px;
+  margin-left: 40px;
+  width: 650px;
+  word-spacing: 1px;
+}
+
+.frame .strong {
+  font-weight: bold;
+}
+
+.frame a {
+  margin-left: 35px;
+}
+
+.badge-img {
+  margin-top: 53px;
+}
+
+.badge-img a {
+  text-decoration: none;
+}
+
+/* Footer */
+
+.footer-list {
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  list-style: none;
+  width: 100vw;
+  margin-top: 50px;
+}
+
+.footer-list li {
+  margin-right: 20px;
+  text-transform: uppercase;
+  color: rgb(186, 186, 188);
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.footer-list a {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.footer-list a {
+  font-size: 15px;
+  color: rgb(87, 127, 160);
+}
