--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,10 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background:linear-gradient(10deg, #06365f, #1c5380);
+  background-color: 
+}
+
+.instagram-logo {
+  background-image: url("/images/brand.png");
 }
