--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@ light blue: #1c5380
 */
 
 body {
-  background: ;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 10px;
 }
@@ -21,9 +22,11 @@ body {
 
 .iconsHeaderContainer {
   display: flex;
+  align-items: center;
   padding-left: 100px;
   padding-top: 100px;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 button {
@@ -54,10 +57,20 @@ p {
 }
 
 .iconsContainer {
-
+  display: flex;
+  margin-left: 48px;
+  margin-right: 30px;
 }
 
 .footerMenu {
-  justify-content: space-around;
+  display: flex;
+  justify-content: center;
+  color: #878a8d;
+}
 
+a {
+  display: flex;
+  color: #1c5380;
+  text-decoration: none;
+  margin-right: 30px;
 }
