--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,78 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header {
+  /* background-color: #1c5380; */
+  height: 400px;
+  background: linear-gradient(#1c5380, #06365f);
+}
+.main {
+  position: relative;
+  top: -181px;
+}
+.container {
+  display: flex;
+  margin: auto;
+  width: 1000px;
+}
+#section-2 {
+  width: 600px;
+}
+#title {
+  display: flex;
+  margin-left: 40px;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+#button-login {
+  width: 80px;
+  height: 25px;
+  padding: 10px;
+  background-color: #1c5380;
+  color: white;
+  border-radius: 4px;
+}
+
+h1 {
+  font-size: 27px;
+  color: #06365f;
+  margin: 0;
+}
+
+#description {
+  margin-left: 40px;
+  background-image: url("/images/frame.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.text-description {
+  padding: 30px;
+  width: 471px;
+}
+#container-buttons {
+  display: flex;
+}
+.container-img {
+  margin-left: 30px;
+}
+nav {
+  width: 900px;
+  margin: 80px auto 50px;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  padding: 0px 10px;
+  text-transform: uppercase;
+}
