--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,82 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+.head-div{
+  background-color:#06365f;
+  height:300px;
+  width:75wh;
+  padding:1em;
+  position:relative;
+}
+
+.head-img{
+  position:absolute;
+  left: 45%;
+  top: 20%;
+}
+
+.head-img2{
+  position:absolute;
+  left: 73%;
+  top: 22%;
+  display: flex;
+  justify-content: center;
+  background-color: #1c5380;
+  padding:10px;
+  width: 80px;
+}
+
+.head-img2 a{
+  color:white;
+  text-decoration: none;
+  padding-left: 10px;
+  border:auto;
+}
+
+
+
+.phones{
+  position: absolute;
+  top:20%;
+  left:20%;
+}
+
+.text-ig{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding-left:  3%;
+  padding-right:22% ;
+  padding-bottom: 200px;
+  position: absolute;
+  left:45%;
+  top:35%;
+  line-height: 1.7em;
+  
+}
+
+footer li a{
+  text-decoration: none;
+}
+h1{
+  font-size: 1.5em;
+  padding-right:40% ;
+  color: #06365f;
+}
+footer{
+  padding: 26% 30%;
+  font-size: 0.8em;
+}
+
+footer ul{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  padding-top: ;
+}
+
+footer ul li{
+  list-style-type: none;
+  color:#06365f;
 }
