--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,54 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 ;
+
+}
+
+header {
+   height: 100%;
+   width:500 px;
+
+   position: absolute; 
+  }
+
+.phones-mockup{
+  padding-left: 120px;
+  padding-top: 80px;
+  
+ 
+ }
+.main-container{
+  margin-left: 500px;
+  padding-top: 100px;
+  position: absolute;
+}
+
+ h1{ 
+   padding-top: 40px;
+   font-family:  Helvetica, Arial, sans-serif;
+   font-size: 25px;
+   font-weight: bold;
+   color: #06365f;
+   width: 260px;
+}
+
+h3{
+  padding-top: 15px;
+  font-size: 15px;
+  width: 400px;
+}
+
+.home-icon {
+  padding-left: 60px;
+}
+
+.badge-iphone{
+  padding-right: 15px;
+ }
+
+footer {
+  position: relative;
+  padding-top: 680px;
+  padding-bottom: 80px;
 }
