--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,84 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+#background {
+  width: 100vw;
+  height: 300px;
+  background: #1c5380;
+}
+
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left {
+  margin-right: 50px;
+}
+
+.top-container { 
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: row;
+  align-content:space-between;
+  justify-content: space-between;
+  width: 550px;
+}
+
+.log-in {
+  flex-direction: row;
+  background-color: #1c5380;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+  width: 125px;
+  height: 50px;
+}
+
+.home {
+  height: 25px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 40px;
+  padding-left: 80px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer li:nth-child(-n + 8) {
+  color: #1c5380;
+  margin: 10px;
+}
+
+.footer li:nth-child(n + 9) {
+  color: grey;
+  margin: 10px;
+}
+
+.footer {
+  font-weight: bold;
+  font-size: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+} */
