--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,71 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+.instagramContainer {
+  background-color: #1c5380;
+  background-repeat: no-repeat;
+  background: linear-gradient(
+    to bottom,
+    #1c5380 0%,
+    #1c5380 40%,
+    #fff 40%,
+    #fff 100%
+  )}
+
+  .instagramContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 800px;
+  
+  }
+
+
+
+.leftSide {
+  display: inline;
+  align-items: center;
+  padding-left: 100px;
+
+}
+
+.rightSide{
+  padding-left: 100px;
+
+}
+
+.topRight {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+h1 {
+
+  color: #06365f ;
+
+}
+
+.botButtons{
+  display: flex;
+  align-items: center;
+
+}
+
+
+.text{
+  background-color: white;
+  max-width: 450px;
+  padding-top: 5px;
+  padding-left: 35px;
+  flex-direction: column;
+  align-items: normal;
+  
+
+
+
+}
+
