--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5  Arial, sans-serif;
   margin: 0;
 }
 
@@ -15,7 +15,7 @@ body {
   background-repeat: no-repeat;
   background: linear-gradient(
     to bottom,
-    #1c5380 0%,
+    #3b8dcf 0%,
     #1c5380 40%,
     #fff 40%,
     #fff 100%
@@ -34,31 +34,34 @@ body {
 .leftSide {
   display: inline;
   align-items: center;
-  padding-left: 100px;
+  /*padding-left: px;*/
 
 }
 
 .rightSide{
   padding-left: 100px;
-
+  position: relative;
+  right: 8%;
 }
 
 .topRight {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 25px;
+ 
   
 }
 
 h1 {
-
   color: #06365f ;
-
 }
 
 .botButtons{
   display: flex;
   align-items: center;
+  padding-top: 10px;
+ 
 
 }
 
@@ -66,13 +69,71 @@ h1 {
 .text{
   background-color: white;
   max-width: 450px;
-  padding-top: 5px;
+  padding-top: 1px ;
   padding-left: 35px;
   flex-direction: column;
   align-items: normal;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px;
+}
+
+.text p {
+text-align: left;
+padding-right: 30px;
+
+
+
+
+}
+
+.button{
+  background-color: #1c5380;
+  background-repeat: no-repeat;
+  background: linear-gradient(
+    to bottom,
+    #3b8dcf 0%,
+    #1c5380 100%
+  
+  );
+  
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  max-height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+
+
+}
+
+.buttonLink{
+ color: white;
+ text-decoration: none;
+ font-weight: bold;
+}
+
+.buttonDivisor {
+  width: 20px;
+  height: auto;
+  display: inline-block;
+}
+
+
+.footer{
+  color: #1c5380;
+  text-align: center;
+  font-size: 18px;
+  padding-bottom: 30px;
+  font-weight: bold;
   
 
 
 
 }
 
+.copyrightDate{
+
+color: grey;
+
+}
+
+
+/* transform: translate (-50%, -50%)
